--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,10 @@ spring.datasource.url=jdbc:mysql://localhost/gvendas_db?useTimezone=true&Timezon
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.show-sql=true
+
+############# CONFIGURATION TRACING (JAEGER) ##################
+opentracing.jaeger.service-name=gestao-vendas
+opentracing.jaeger.udp-sender.localhost=localhost
+opentracing.jaeger.udp-sender.port=6831
+opentracing.jaeger.sampler-type=const
+opentracing.jaeger.sampler-param=1
