--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,8 @@ server.port=8081
 
 ############# MYSQL COMFIGURATION ##############
 spring.jpa.database=MYSQL
-spring.datasource.url=jdbc:mysql://localhost/gvendas_db?useTimezone=true&Timezone=serverTimezone=America/Sao_paulo
+spring.datasource.url=jdbc:tracing:mysql://localhost/gvendas_db?useTimezone=true&Timezone=serverTimezone=America/Sao_paulo
+spring.datasource.driver-class-name=io.opentracing.contrib.jdbc.TracingDriver
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.show-sql=true
