--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,28 +1,34 @@
 version: '3.8'
-
 services:
-
   mysql:
-    image: mysql:latest
+    image: 'mysql:latest'
     container_name: mysql
     ports:
-      - 3366:3366
+      - '3366:3366'
     environment:
       MYSQL_USER: gvendas
       MYSQL_PASSWORD: gvendas
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: gvendas_db
-
-  jaeger: 
-    image: jaegertracing/all-in-one:1.32
+  jaeger:
+    image: 'jaegertracing/all-in-one:1.32'
     container_name: jaeger
     ports:
-      - 5775:5775/udp 
-      - 6831:6831/udp
-      - 6832:6832/udp 
-      - 5778:5778 
-      - 16686:16686 
-      - 14250:14250 
-      - 14268:14268 
-      - 14269:14269 
-      - 9411:9411 
+      - '5775:5775/udp'
+      - '6831:6831/udp'
+      - '6832:6832/udp'
+      - '5778:5778'
+      - '16686:16686'
+      - '14250:14250'
+      - '14268:14268'
+      - '14269:14269'
+      - '9411:9411'
+  prometheus:
+      image: 'prom/prometheus:v2.35.0'
+      container_name: prometheus
+      ports:
+      - '9090:9090'
+      volumes:
+      - './prometheus.yml:/etc/prometheus/prometheus.yml'
+      command:
+      - ' --config.file=/etc/prometheus/prometheus.yml'
