--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,7 @@ services:
       - '14268:14268'
       - '14269:14269'
       - '9411:9411'
+      
   prometheus:
       image: 'prom/prometheus:v2.35.0'
       container_name: prometheus
@@ -32,3 +33,9 @@ services:
       - './prometheus.yml:/etc/prometheus/prometheus.yml'
       command:
       - ' --config.file=/etc/prometheus/prometheus.yml'
+
+  grafana:
+      image: grafana/grafana:8.5.1
+      container_name: grafana
+      ports:     
+        - 3000:3000
