Iniciando a aplicação pelo docker-compose.Parte3/3

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=8081
 
 ############# MYSQL COMFIGURATION ##############
 spring.jpa.database=MYSQL
-spring.datasource.url=jdbc:tracing:mysql://localhost/gvendas_db?useTimezone=true&Timezone=serverTimezone=America/Sao_paulo
+spring.datasource.url=jdbc:tracing:mysql://mysql:3306/gvendas_db?useTimezone=true&Timezone=serverTimezone=America/Sao_paulo
 spring.datasource.driver-class-name=io.opentracing.contrib.jdbc.TracingDriver
 spring.datasource.username=root
 spring.datasource.password=root
@@ -11,7 +11,7 @@ spring.jpa.show-sql=true
 
 ############# CONFIGURATION TRACING (JAEGER) ##################
 opentracing.jaeger.service-name=gestao-vendas
-opentracing.jaeger.udp-sender.localhost=localhost
+opentracing.jaeger.udp-sender.localhost=jaeger
 opentracing.jaeger.udp-sender.port=6831
 opentracing.jaeger.sampler-type=const
 opentracing.jaeger.sampler-param=1
